<resources>
    <string name="app_name" translatable="false">France Assos Santé</string>

    <string name="main_sentence">A simple gesture for a strong impact</string>
    <string name="make_donation">Make a donation to an association of your choice</string>
    <string name="Coord">My contact details</string>
    <string name="make_donation_btn">Donate</string>
    <string name="discover_association">Discover all the associations</string>
    <string name="discover_btn">Discover</string>


    <string name="sign_in">Sign in</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_e_mail">Enter your e-mail</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="scan_association">Scan your association\'s code</string>
    <string name="qr_code">QR Code</string>
    <string name="scanner_qr_code">QR Code</string>
    <string name="mon_don">My donation</string>
    <string name="choix_association">Choice of association</string>
    <string name="montant_du_don">Donation amount</string>
    <string name="don_r_current">Recurring donation</string>
    <string name="Next">Next</string>


    <string name="association_logo">Association\'s logo</string>
    <string name="mon_recapitulatif">My recap</string>
    <string name="mes_informations_bancaires">My banking informations</string>
    <string name="valider">Validate</string>
    <string name="cryptogramme_3_chiffres">3 digit cryptogram</string>
    <string name="num_ro_de_carte">Card number</string>
    <string name="nom_sur_la_carte">Name on the card</string>
    <string name="association">Association:</string>
    <string name="et_faites_un_don_pour_l_association_de_votre_choix">make a donation to the association of your choice</string>
    <string name="connexion_inscription">Sign in / Sign up</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Password</string>
    <string name="se_connecter">Sign in</string>
    <string name="s_inscrire">Sign up</string>
    <string name="inscription">Signing up</string>
    <string name="supprimer_un_compte">Delete account</string>
    <string name="connectez_vous">Sign in</string>
    <string name="rechercher">Search</string>
    <string name="menu">Menu</string>
    <string name="param_tres">Settings</string>
    <string name="nom">Last name</string>
    <string name="pr_nom">First name</string>
    <string name="adresse_e_mail">Email adress</string>

    <string name="drawer_accueil">Main menu</string>
    <string name="drawer_liste_assos">Our partner associations</string>
    <string name="drawer_qrCode">Scanner qr code</string>
    <string name="drawer_aideFAQ">Help/FAQ</string>
    <string name="drawer_sinscrire">Register</string>
    <string name="montant">Amount:</string>
    <string name="type_de_don">Donation type:</string>
    <string name="voir_comptes_enregistr_s">View registered accounts</string>
    <string name="d_connexion">Log out</string>
    <string name="confirmer_le_mot_de_passe">Confirm password</string>
    <string name="langue">Language</string>
    <string name="apparence">Appearence</string>
    <string name="assist">Assistance</string>
    <string name="donne">Data and confidentiality</string>
    <string name="compte">My account</string>
    <string name="autcoll">Allow anonymous collection</string>
    <string name="txtlong">This application does not collect any personal data. All information regarding your donations remains anonymous and is simulated for educational purposes.</string>

    <string name="all_categories">All categories</string>
    <string name="handicap">Disability</string>
    <string name="mental_health">Mental Health</string>
    <string name="chronic_rare_diseases">Chronic and Rare Diseases</string>
    <string name="social_support">Social Support and Consumers</string>
    <string name="addictions">Addictions</string>
    <string name="cardio_donation">Cardiovascular, Donations, and Transplants</string>
    <string name="cancer_support">Cancer and Support</string>
    <string name="pour_les_administrateurs">For administrators</string>
    <string name="r_sum_des_dons_collect_s">Summary of collected donations</string>
    <string name="total_des_dons_collect_s">Total amount of donations</string>
    <string name="nombre_total_de_dons_effectu_s">Total number of donations</string>
    <string name="zero_euro" translatable="false">0.00€</string>
    <string name="dons_re_us_ce_mois_ci">Amount of donations this month</string>
    <string name="donateur">Donator</string>
    <string name="date">Date</string>
    <string name="statistiques_des_dons">Donation statistics</string>
    <string name="title_activity_settings" translatable="false">activity_settings</string>
    <string name="don_enregistre">Successful payment. Donation registered.</string>
    <string name="textapparence">Choose a theme</string>
    <string name="modeclaire">Light mode ☀️ </string>
    <string name="modefonce">Dark mode 🌙 </string>

    <string name="scan_qr_button_retour">Back</string>
    <string name="generer_qr">Create a QR code</string>

    <string name="faq_don_comment">How to make a donation?</string>
    <string name="faq_don_comment_desc">Choose an association, then click &quot;Donate&quot; and follow the instructions.</string>
    <string name="faq_paiement_moyens">What payment methods are accepted?</string>
    <string name="faq_paiement_moyens_desc">You can pay by credit card.</string>
    <string name="faq_don_securise">Is my donation secure?</string>
    <string name="faq_don_securise_desc">Yes, we use a secure payment system compliant with PCI-DSS standards.</string>
    <string name="faq_recu_fiscal">Can I get a tax receipt?</string>
    <string name="faq_recu_fiscal_desc">Yes, a receipt is automatically generated if the association is authorized to issue one.</string>
    <string name="faq_compte_creation">How do I create an account?</string>
    <string name="faq_compte_creation_desc">Click on &quot;Sign up&quot; from the home screen and fill in the form.</string>
    <string name="faq_bug_plante">The app crashes, what can I do?</string>
    <string name="faq_bug_plante_desc">Try restarting or reinstalling the app. If the issue persists, contact us.</string>
    <string name="faq_bug_notifications">I\'m not receiving notifications</string>
    <string name="faq_bug_notifications_desc">Make sure notifications are enabled in your phone settings.</string>
    <string name="faq_bug_don">A bug occurred during a donation</string>
    <string name="faq_bug_don_desc">The amount will not be charged. You can try again or contact support.</string>
    <string name="faq_appli_but">What is the purpose of this app?</string>
    <string name="faq_appli_but_desc">It allows easy donations to committed associations.</string>
    <string name="faq_appli_gratuite">Is the app free?</string>
    <string name="faq_appli_gratuite_desc">Yes, it\'s 100% free for users.</string>
    <string name="faq_appli_selection">How are associations selected?</string>
    <string name="faq_appli_selection_desc">They are chosen based on seriousness, transparency, and social impact.</string>
    <string name="faq_access_handicap">Is the app accessible for people with disabilities?</string>
    <string name="faq_access_handicap_desc">Yes, it\'s compatible with screen readers and follows WCAG standards.</string>
    <string name="faq_don_handicap">Can I donate to a disability-related cause?</string>
    <string name="faq_don_handicap_desc">Yes, many partner associations support people with disabilities.</string>
    <string name="faq_cat_dons">Donations and Transactions</string>
    <string name="faq_cat_technique">Technical Issues</string>
    <string name="faq_cat_appli">About the App</string>
    <string name="faq_cat_autre">Other Questions</string>
    <string name="log_in_as_an_admin">Log in as an admin</string>


</resources>
