<?xml version="1.0" encoding="utf-8"?>




<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="189dp">

        <!-- ✅ Header -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/logo_couleur" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ico_menu"
                android:contentDescription="@string/menu"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_margin="16dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:text="@string/main_sentence"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/login_redirect_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:layout_margin="35dp"
            android:background="@drawable/bg_login"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connectez_vous"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_login_redirect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/se_connecter" />
            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/d_connexion" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="342dp"
            android:layout_height="198dp"
            android:layout_margin="35dp"
            android:background="@drawable/bg_login"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discover_association"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="@string/et_faites_un_don_pour_l_association_de_votre_choix"
                android:textAlignment="center" />

            <Button
                android:id="@+id/discover_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/discover_btn" />


        </LinearLayout>


        <!-- ✅ Footer -->
        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="center">


            <Button
                android:id="@+id/log_in_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/log_in"
                android:background="@drawable/ico_account"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <!-- ⚙️ Logo paramètres (à droite) -->
            <ImageButton
                android:id="@+id/settings_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_setting"
                android:contentDescription="@string/param_tres"
                android:background="?attr/selectableItemBackgroundBorderless"/>
        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 📜 Menu latéral -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
