<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="?android:windowBackground">


    <ImageButton
        android:id="@+id/btn_back_apparence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        android:contentDescription="Retour"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textapparence"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/btn_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modeclaire"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modefonce" />
</LinearLayout>
