<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonationActivity">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

                <!-- ✅ Header -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="16dp"
                        app:srcCompat="@drawable/logo_couleur" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/menu_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ico_menu"
                        android:contentDescription="@string/menu"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_margin="16dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5px"
                    android:background="@color/black"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_margin="35dp"
                    android:background="@drawable/bg_login"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Coord"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/input_nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:hint="@string/nom"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/input_prenom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:hint="@string/pr_nom"
                        android:inputType="textPersonName" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_margin="35dp"
                    android:background="@drawable/bg_login"
                    android:orientation="vertical">

                    <!-- Titre du formulaire -->


                    <TextView
                        android:id="@+id/tv_association"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/association"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <!-- Montant du don -->
                    <EditText
                        android:id="@+id/input_montant_don"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="17dp"
                        android:hint="@string/montant_du_don"
                        android:inputType="numberDecimal" />

                    <!-- Don récurrent -->
                    <CheckBox
                        android:id="@+id/checkbox_don_recurrent"
                        android:layout_width="187dp"
                        android:layout_height="21dp"
                        android:layout_marginBottom="18dp"
                        android:text="@string/don_r_current" />

                    <Button
                        android:id="@+id/btn_next"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_margin="1dp"
                        android:text="@string/Next" />

                    <Button
                        android:id="@+id/btn_scan_qr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Scanner un QR Code"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="center_horizontal"/>




                </LinearLayout>


                <!-- ✅ Footer -->
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:gravity="center">


                    <Button
                        android:id="@+id/log_in_btn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/log_in"
                        android:background="@drawable/ico_account"/>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <!-- ⚙️ Logo paramètres (à droite) -->
                    <ImageButton
                        android:id="@+id/settings_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_setting"
                        android:contentDescription="@string/param_tres"
                        android:background="?attr/selectableItemBackgroundBorderless"/>
                </LinearLayout>
            </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
