<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?android:windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">


        <ImageButton
            android:id="@+id/btn_back_donnees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:contentDescription="Retour"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donne"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtlong"
            android:textSize="16sp"
            android:lineSpacingExtra="6dp" />



        <Switch
            android:id="@+id/switch_collecte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autcoll"
            android:layout_marginTop="20dp"/>


    </LinearLayout>
</ScrollView>
