<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selection_assos_activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="189dp">

        <!-- ✅ Header -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/search_icon"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/rechercher"
                android:src="@drawable/ico_search" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="0dp"
                app:srcCompat="@drawable/logo_couleur" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ico_menu"
                android:contentDescription="@string/menu"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp"/>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@color/black"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="Rechercher une association..."
            android:iconifiedByDefault="false"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">


            <Button
                android:id="@+id/log_in_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ico_account"
                android:contentDescription="@string/log_in" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- ⚙️ Logo paramètres (à droite) -->
            <ImageButton
                android:id="@+id/settings_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/param_tres"
                android:src="@drawable/ic_setting" />
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>